load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "attachment.go",
        "category.go",
        "comment.go",
        "link.go",
        "post.go",
        "service.go",
        "tag.go",
        "user.go",
    ],
    importpath = "github.com/tx7do/kratos-blog/blog-backend/app/admin/service/internal/service",
    visibility = ["//app/admin/service:__subpackages__"],
    deps = [
        "//api/admin/service/v1:service",
        "//api/comment/service/v1:service",
        "//api/content/service/v1:service",
        "//api/file/service/v1:service",
        "//api/pagination",
        "//api/user/service/v1:service",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//middleware/auth/jwt",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_google_wire//:wire",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":service",
    visibility = ["//app/admin/service:__subpackages__"],
)
