load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/tx7do/kratos-blog/blog-backend/app/comment/service/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//app/comment/service/internal/biz",
        "//app/comment/service/internal/conf",
        "//app/comment/service/internal/data",
        "//app/comment/service/internal/server",
        "//app/comment/service/internal/service",
        "//pkg/service",
        "//pkg/util/bootstrap",
        "@com_github_go_kratos_kratos_v2//:kratos",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//registry",
        "@com_github_go_kratos_kratos_v2//transport/grpc",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
