load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "biz",
    srcs = [
        "biz.go",
        "comment.go",
    ],
    importpath = "github.com/tx7do/kratos-blog/blog-backend/app/comment/service/internal/biz",
    visibility = ["//app/comment/service:__subpackages__"],
    deps = [
        "//api/comment/service/v1:service",
        "//api/pagination",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_google_wire//:wire",
    ],
)

alias(
    name = "go_default_library",
    actual = ":biz",
    visibility = ["//app/comment/service:__subpackages__"],
)
