load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "biz",
    srcs = [
        "biz.go",
        "comment.go",
    ],
    importpath = "kratos-blog/app/comment/service/internal/biz",
    visibility = ["//app/comment/service:__subpackages__"],
    deps = [
        "//gen/api/go/comment/service/v1:service",
        "//gen/api/go/pagination",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_google_wire//:wire",
    ],
)
