load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "grpc.go",
        "init.go",
    ],
    importpath = "kratos-blog/app/comment/service/internal/server",
    visibility = ["//app/comment/service:__subpackages__"],
    deps = [
        "//app/comment/service/internal/service",
        "//gen/api/go/comment/service/v1:service",
        "//gen/api/go/common/conf",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//middleware/logging",
        "@com_github_go_kratos_kratos_v2//middleware/recovery",
        "@com_github_go_kratos_kratos_v2//middleware/tracing",
        "@com_github_go_kratos_kratos_v2//transport/grpc",
        "@com_github_google_wire//:wire",
    ],
)
