load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "comment.go",
        "service.go",
    ],
    importpath = "github.com/tx7do/kratos-blog/blog-backend/app/comment/service/internal/service",
    visibility = ["//app/comment/service:__subpackages__"],
    deps = [
        "//api/comment/service/v1:service",
        "//api/pagination",
        "//app/comment/service/internal/biz",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_google_wire//:wire",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":service",
    visibility = ["//app/comment/service:__subpackages__"],
)
