load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "comment.go",
        "init.go",
    ],
    importpath = "kratos-blog/app/comment/service/internal/service",
    visibility = ["//app/comment/service:__subpackages__"],
    deps = [
        "//app/comment/service/internal/biz",
        "//gen/api/go/comment/service/v1:service",
        "//gen/api/go/common/pagination",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_google_wire//:wire",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
